@@ -1,0 +1,73 @@
+/*
+ * Implementation for objc.NULL
+ */
+#include "pyobjc.h"
+
+PyObject* PyObjC_NULL = NULL;
+
+static PyObject*
+obj_repr(PyObject* self __attribute__((__unused__)))
+{
+	return PyString_FromString("objc.NULL");
+}
+
+PyTypeObject PyObjC_NULL_Type = {
+	PyObject_HEAD_INIT(&PyType_Type)
+	0,					/* ob_size */
+	"objc.NULL_type",			/* tp_name */
+	sizeof(PyObject),			/* tp_basicsize */
+	0,					/* tp_itemsize */
+	/* methods */
+	0,	 				/* tp_dealloc */
+	0,					/* tp_print */
+	0,					/* tp_getattr */
+	0,					/* tp_setattr */
+	0,					/* tp_compare */
+	(reprfunc)obj_repr,			/* tp_repr */
+	0,					/* tp_as_number */
+	0,					/* tp_as_sequence */
+	0,		       			/* tp_as_mapping */
+	0,					/* tp_hash */
+	0,					/* tp_call */
+	0,					/* tp_str */
+	0,					/* tp_getattro */
+	0,					/* tp_setattro */
+	0,					/* tp_as_buffer */
+	Py_TPFLAGS_DEFAULT,			/* tp_flags */
+ 	0,					/* tp_doc */
+ 	0,					/* tp_traverse */
+ 	0,					/* tp_clear */
+	0,					/* tp_richcompare */
+	0,					/* tp_weaklistoffset */
+	0,					/* tp_iter */
+	0,					/* tp_iternext */
+	0,					/* tp_methods */
+	0,					/* tp_members */
+	0,					/* tp_getset */
+	0,					/* tp_base */
+	0,					/* tp_dict */
+	0,					/* tp_descr_get */
+	0,					/* tp_descr_set */
+	0,					/* tp_dictoffset */
+	0,					/* tp_init */
+	0,					/* tp_alloc */
+	0,					/* tp_new */
+	0,		        		/* tp_free */
+	0,					/* tp_is_gc */
+	0,					/* tp_bases */
+	0,					/* tp_mro */
+	0,					/* tp_cache */
+	0, 					/* tp_subclasses */
+	0,					/* tp_weaklist */
+	0					/* tp_del */
+};
+
+PyObject* PyObjCInitNULL(void)
+{
+	PyObject* result;
+
+	result = PyObjC_NULL = PyObject_New(PyObject, &PyObjC_NULL_Type);
+	Py_XINCREF(PyObjC_NULL);
+
+	return result;
+}
